feat: added new projects

--- a/Aulas/Aula 0x - projetos/to-do/index.html
+++ b/Aulas/Aula 0x - projetos/to-do/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,33 +9,20 @@
   <link rel="stylesheet" href="styles.css">
   <title>To-do List</title>
 </head>
+
 <body>
   <main class="container">
     <input type="text" class="input" placeholder="Adicione uma tarefa" />
     <div class="aberto">
       <h3>Não finalizadas</h3>
-      <div class="task">
-      tarefa 1
-        <i class="fas fa-trash-alt"></i>
-        <i class="fas fa-check"></i>
-      </div>
-      <div class="task">
-      tarefa 2
-        <i class="fas fa-trash-alt"></i>
-        <i class="fas fa-check"></i>
-      </div>
+
+
     </div>
     <div class="finalizado">
       <h3>Finalizadas</h3>
-      <div class="task">
-        tarefa 1
-        <i class="fas fa-trash-alt"></i>
-      </div>
-      <div class="task">
-      tarefa 2
-        <i class="fas fa-trash-alt"></i>
-      </div>
+
     </div>
   </main>
 </body>
+
 </html>
